--- a/myPoliFile/Base.lproj/LaunchScreen.storyboard
+++ b/myPoliFile/Base.lproj/LaunchScreen.storyboard
@@ -17,19 +17,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="dtw-gg-Mlv">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon1" translatesAutoresizingMaskIntoConstraints="NO" id="bR9-ZE-1dn">
                                 <rect key="frame" x="132" y="373" width="150" height="150"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="150" id="UQN-Oh-evT"/>
-                                    <constraint firstAttribute="height" constant="150" id="b0Z-69-c9O"/>
+                                    <constraint firstAttribute="height" constant="150" id="262-AJ-h6i"/>
+                                    <constraint firstAttribute="width" constant="150" id="oBB-Ua-hAD"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="dtw-gg-Mlv" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="F5H-QD-M7O"/>
-                            <constraint firstItem="dtw-gg-Mlv" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="jRb-6B-WsX"/>
+                            <constraint firstItem="bR9-ZE-1dn" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="rQ8-lf-jNm"/>
+                            <constraint firstItem="bR9-ZE-1dn" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="u0j-cb-4sr"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -39,7 +39,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="icon" width="256" height="256"/>
+        <image name="icon1" width="2153.5" height="1758"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
