--- a/myPoliFile/Base.lproj/LaunchScreen.storyboard
+++ b/myPoliFile/Base.lproj/LaunchScreen.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,19 +18,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon1" translatesAutoresizingMaskIntoConstraints="NO" id="bR9-ZE-1dn">
-                                <rect key="frame" x="132" y="373" width="150" height="150"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="262-AJ-h6i"/>
-                                    <constraint firstAttribute="width" constant="150" id="oBB-Ua-hAD"/>
-                                </constraints>
-                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="myPoliFile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kaU-Wz-egu">
+                                <rect key="frame" x="104" y="424" width="206" height="48"/>
+                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="40"/>
+                                <color key="textColor" name="titlePrimary"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="bR9-ZE-1dn" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="rQ8-lf-jNm"/>
-                            <constraint firstItem="bR9-ZE-1dn" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="u0j-cb-4sr"/>
+                            <constraint firstItem="kaU-Wz-egu" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="bkA-mg-g4e"/>
+                            <constraint firstItem="kaU-Wz-egu" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="xfq-rp-H8f"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -39,7 +39,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="icon1" width="2153.5" height="1758"/>
+        <namedColor name="titlePrimary">
+            <color red="0.19215686274509802" green="0.37254901960784315" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
